2012-03-14  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Improve spacing for bold rendering mode.

	* src/ftview.c (Render_Embolden): Fix algorithm to reduce spacing.

2012-03-08  Werner Lemberg  <wl@gnu.org>

	* Version 2.4.9 released.
	=========================


	Tag sources with `VER-2-4-9' (the previous commit has this tag).

	* README: Updated.

2012-03-03  Werner Lemberg  <wl@gnu.org>

	[ftstring] Fix display of kern compare mode.

	* src/ftstring.c (main) <RENDER_MODE_KERNCMP>: Fix scaling of
	`height'.

2012-03-03  Werner Lemberg  <wl@gnu.org>

	Fix handling of track kerning.

	* src/ftcommon.c (string_render_prepare): Fix scaling for
	`FT_Get_Track_Kerning'.

2012-03-03  Werner Lemberg  <wl@gnu.org>

	Remove unused function.

	* src/ftcommon.[ch] (FTDemo_Set_Current_Pointsize): Remove.

2012-03-02  Werner Lemberg  <wl@gnu.org>

	Fix Savannah bug #33660.

	* src/ftcommon.c: Include `FT_XFREE86_H'.
	(file_suffixes): Remove.
	(my_face_requester): Check whether font driver is `Type 1' instead
	of relying on the file suffix.
	Additionally, prefer `.afm' over `.pfm'.
	(FTDemo_Install_Font): Don't try various suffixes.
	Allocate more memory for `font->filepathname' as needed by
	`my_face_requester'.

	* src/ftdiff.c: Include `ftcommon.h' and `common.h'.
	Remove declaration of `error' everywhere.
	(usage): Updated.
	Add argument for binary name.
	Update all callers.
	(event_help): Updated.

	* src/ftgrid.c (usage): Updated.

	* src/ftstring.c (event_help, usage): Updated.

	* src/ftview.c (usage): Updated.

2012-03-02  Werner Lemberg  <wl@gnu.org>

	* src/ftstring.c: Remove redundant code; formatting.

2012-03-02  Werner Lemberg  <wl@gnu.org>

	* src/ftdiff.c: Formatting.

2012-03-02  Werner Lemberg  <wl@gnu.org>

	* src/ftgrid.c: Remove redundant code; formatting.

2012-03-02  Werner Lemberg  <wl@gnu.org>

	* src/ftcommon.c: Remove dead code; formatting.

2012-02-13  Peter Grandi  <pg_mh@mh.to.sabi.co.UK>
